--- a/css/main.css
+++ b/css/main.css
@@ -21,10 +21,11 @@ body {
   margin: 0;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
-  font-size: 16pt;
+  font-size: 14pt;
   letter-spacing: 0.03em;
   background-color: #292929;
   color: #EEE;
+  line-height: 1.5em;
 }
 
 h1,
@@ -134,40 +135,67 @@ nav ul li {
   text-decoration: none;
 }
 
-.portfolio img {
-  width: 100%;
+.shrink-content {
+  margin-bottom: 1em;
 }
-
-.post-content p {
-  margin: 0.7em 0;
+@media only screen and (min-width: 33.75em) {
+  .shrink-content {
+    margin-bottom: 2em;
+  }
 }
-.post-content h1 {
-  font-weight: 400;
-  font-size: 1.4em;
+@media only screen and (min-width: 60em) {
+  .shrink-content {
+    margin-bottom: 3em;
+  }
 }
-.post-content h2 {
-  font-weight: 400;
-  font-size: 1.2em;
+.shrink-content figure {
+  padding: 0;
+  margin: 0 0 1.5em 0;
+  line-height: normal;
 }
-.post-content h3 {
-  font-weight: 400;
-  font-size: 1em;
+.shrink-content figure img {
+  max-width: 100%;
+  margin: 0 auto;
+  display: block;
 }
-
-.post-date {
+.shrink-content figure figcaption h4 {
+  font-family: "Montserrat";
+  font-style: normal;
+  font-weight: 200;
   font-size: 0.8em;
+  color: #aaa;
+  margin: 0.2em 0 0;
+  text-align: center;
 }
 
-.synopsis {
-  margin-top: 0;
+.project-title {
+  border-bottom: 1px solid #444;
+  padding: 1em 0;
+}
+.project-title .name {
+  font-size: 1.8em;
+  font-family: "Merriweather";
+  font-style: italic;
+  color: white;
+}
+.project-title .dates {
+  padding-top: 0.6em;
+  font-size: 0.8em;
+  color: #AAA;
+  line-height: 1.4em;
 }
 
-.project-card-container {
+.project-cards {
   display: flex;
   flex-wrap: wrap;
 }
 
 .project-card {
-  flex: 1 1 auto;
-  margin-right: 0.7em;
+  flex: 1 0 50%;
+  white-space: nowrap;
+  box-sizing: border-box;
+  min-width: 14em;
+  padding: 0 0.5em 0.5em 0;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
