--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,12 @@ a {
 a:hover {
   text-decoration: underline;
 }
+a.permalink {
+  color: #EEE;
+}
+a.permalink:hover {
+  text-decoration: none;
+}
 
 nav ul {
   padding: 0;
